--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@ui5/cli-monorepo",
 	"private": true,
 	"version": "0.0.1",
-	"description": "UI5 CLI - Main Monorepo",
+	"description": "UI5 CLI - Monorepo",
 	"author": {
 		"name": "SAP SE",
 		"email": "openui5@sap.com",
