--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,10 @@ jsdocs/
 site/
 
 # Custom files
-docs/pages/CLI.md
-docs/CLI.md
+# Documentation
+packages/documentation/docs/CLI.md
+packages/documentation/docs/.vitepress/dist
+packages/documentation/docs/.vitepress/cache
+packages/documentation/.vitepress/dist
+packages/documentation/.vitepress/cache
 
