--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,8 @@ test/tmp/
 jsdocs/
 site/
 
-# Custom files
+# Documentation
 packages/documentation/docs/pages/CLI.md
+packages/documentation/docs/.vitepress/dist
+packages/documentation/docs/.vitepress/cache
+packages/documentation/dist
